--- a/SimpleTaskSystem/SimpleTaskSystem.WebSpaAngular/Web.config
+++ b/SimpleTaskSystem/SimpleTaskSystem.WebSpaAngular/Web.config
@@ -20,7 +20,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="Default" connectionString="Server=localhost; Database=SimpleTaskSystemDb; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Server=TATYANA\WORKSQL; Database=SimpleTaskSystemDb; Trusted_Connection=True; User Id=sa;Password=123;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <globalization culture="auto" uiCulture="auto" />
