--- a/SimpleTaskSystem/SimpleTaskSystem.WebSpaAngular/SimpleTaskSystem.WebSpaAngular.csproj
+++ b/SimpleTaskSystem/SimpleTaskSystem.WebSpaAngular/SimpleTaskSystem.WebSpaAngular.csproj
@@ -85,10 +85,34 @@
       <HintPath>..\packages\log4net.1.2.10\lib\2.0\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.1.0\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework">
+      <HintPath>..\..\..\aspnetboilerplate\src\AwesomeAngularMVCApp\packages\Microsoft.AspNet.Identity.EntityFramework.2.1.0\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Owin">
+      <HintPath>..\..\..\aspnetboilerplate\src\AwesomeAngularMVCApp\packages\Microsoft.AspNet.Identity.Owin.2.1.0\lib\net45\Microsoft.AspNet.Identity.Owin.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Owin">
+      <HintPath>..\..\..\aspnetboilerplate\src\AwesomeAngularMVCApp\packages\Microsoft.Owin.2.1.0\lib\net45\Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Host.SystemWeb">
+      <HintPath>..\..\..\aspnetboilerplate\src\AwesomeAngularMVCApp\packages\Microsoft.Owin.Host.SystemWeb.2.1.0\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security">
+      <HintPath>..\..\..\aspnetboilerplate\src\AwesomeAngularMVCApp\packages\Microsoft.Owin.Security.2.1.0\lib\net45\Microsoft.Owin.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security.Cookies">
+      <HintPath>..\..\..\aspnetboilerplate\src\AwesomeAngularMVCApp\packages\Microsoft.Owin.Security.Cookies.2.1.0\lib\net45\Microsoft.Owin.Security.Cookies.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.7\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\..\..\aspnetboilerplate\src\AwesomeAngularMVCApp\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System.Collections.Immutable">
       <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
@@ -170,7 +194,17 @@
     <Content Include="Abp\Framework\styles\abp.css" />
     <Content Include="Abp\Framework\styles\abp.min.css" />
     <Content Include="Abp\Framework\styles\utils\ie10fix.css" />
+    <Content Include="App\css\animate.css" />
+    <Content Include="App\css\app.css" />
+    <Content Include="App\css\app.min.css" />
+    <Content Include="App\css\bootstrap.css" />
+    <Content Include="App\css\font-awesome.min.css" />
+    <Content Include="App\css\font.css" />
+    <Content Include="App\css\simple-line-icons.css" />
     <Content Include="App\Main\app.js" />
+    <Content Include="App\Main\factories\authHttpResponseInterceptor.js" />
+    <Content Include="App\Main\factories\loginFactory.js" />
+    <Content Include="App\Main\factories\registrationFactory.js" />
     <Content Include="App\Main\filters\moment_filters.js" />
     <Content Include="App\Main\main.css">
       <DependentUpon>main.less</DependentUpon>
@@ -180,8 +214,10 @@
     </Content>
     <Content Include="App\Main\views\layout\header.js" />
     <Content Include="App\Main\views\layout\layout.js" />
-    <Content Include="App\Main\views\task\list.js" />
+    <Content Include="App\Main\views\login\login.js" />
+    <Content Include="App\Main\views\login\register.js" />
     <Content Include="App\Main\views\task\new.js" />
+    <Content Include="App\Main\views\task\list.js" />
     <Content Include="Content\bootstrap-cosmo.min.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -263,6 +299,11 @@
     <Content Include="Scripts\angular-ui\ui-bootstrap-tpls.min.js" />
     <Content Include="Scripts\angular-ui\ui-bootstrap.js" />
     <Content Include="Scripts\angular-ui\ui-bootstrap.min.js" />
+    <Content Include="Scripts\angular-ui\ui-jp.config.js" />
+    <Content Include="Scripts\angular-ui\ui-jp.js" />
+    <Content Include="Scripts\angular-ui\ui-load.js" />
+    <Content Include="Scripts\angular-ui\ui-nav.js" />
+    <Content Include="Scripts\angular-ui\ui-toggle.js" />
     <Content Include="Scripts\angular-ui\ui-utils-ieshiv.js" />
     <Content Include="Scripts\angular-ui\ui-utils-ieshiv.min.js" />
     <Content Include="Scripts\angular-ui\ui-utils.js" />
@@ -276,7 +317,6 @@
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="App\Main\views\task\list.cshtml" />
-    <Content Include="App\Main\views\task\new.cshtml" />
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
@@ -304,6 +344,28 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\toastr.scss" />
     <Content Include="Content\toastr.less" />
+    <Content Include="App\Main\views\login\login.cshtml" />
+    <Content Include="App\css\less\app.arrow.less" />
+    <Content Include="App\css\less\app.butterbar.less" />
+    <Content Include="App\css\less\app.buttons.less" />
+    <Content Include="App\css\less\app.colors.less" />
+    <Content Include="App\css\less\app.components.less" />
+    <Content Include="App\css\less\app.item.less" />
+    <Content Include="App\css\less\app.layout.boxed.less" />
+    <Content Include="App\css\less\app.layout.less" />
+    <Content Include="App\css\less\app.less" />
+    <Content Include="App\css\less\app.mixins.less" />
+    <Content Include="App\css\less\app.nav.dock.less" />
+    <Content Include="App\css\less\app.nav.less" />
+    <Content Include="App\css\less\app.nav.offscreen.less" />
+    <Content Include="App\css\less\app.ng.less" />
+    <Content Include="App\css\less\app.plugin.less" />
+    <Content Include="App\css\less\app.reset.less" />
+    <Content Include="App\css\less\app.utilities.less" />
+    <Content Include="App\css\less\app.variables.less" />
+    <Content Include="App\css\less\app.widgets.less" />
+    <Content Include="App\Main\views\login\register.cshtml" />
+    <Content Include="App\Main\views\task\new.cshtml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\i18n\angular-locale_aa-dj.js" />
     <Content Include="Scripts\i18n\angular-locale_aa-er.js" />
@@ -1077,16 +1139,22 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\SimpleTaskSystemWebModule.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="App_Start\SimpleTaskSystemNavigationProvider.cs" />
     <Compile Include="Controllers\SimpleTaskSystemControllerBase.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
     <Compile Include="Views\SimpleTaskSystemWebViewPageBase.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -1103,7 +1171,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SimpleTaskSystem.Core\SimpleTaskSystem.Core.csproj">
