--- a/SimpleTaskSystem/SimpleTaskSystem.WebSpaAngular/packages.config
+++ b/SimpleTaskSystem/SimpleTaskSystem.WebSpaAngular/packages.config
@@ -24,6 +24,7 @@
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net451" />
   <package id="json2" version="1.0.2" targetFramework="net451" />
   <package id="log4net" version="1.2.10" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
